# scavenger

./: README.md
board/: main.cpp
control/: main.cpp  main.qml
detect/: CMakeLists.txt  main.cpp
first/: CMakeLists.txt  main.cpp
manipulator/: main.cpp
servo_pwm/: main.cpp
